# routeweiler-python-sdk

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/routeweiler/: __init__.py  _auth.py  _base.py  _constants.py  _macaroon.py  _storage.py  client.py  errors.py  normalized.py
src/routeweiler/budgets/: __init__.py  _draw.py  _reaper.py  _snapshot.py  _sync_reads.py  ecb_provider.py  fmv.py  fmv_provider.py  keystore.py  local.py  receipts.py  schema.py
src/routeweiler/credentials/: __init__.py  manifest_strategy.py  recovery.py  schema.py  store.py
src/routeweiler/credentials/manifests/: __init__.py  _bundled.py  lightning-enable-store.yaml  lightning-shop.yaml  loader.py  schema.py
src/routeweiler/funding/: __init__.py  evm.py  lightning.py  stripe.py  tempo.py
src/routeweiler/policy/: __init__.py  dsl.py  engine.py
src/routeweiler/rails/: __init__.py  _bolt11.py  _mpp_http.py  _tempo_tx.py  base.py  l402.py  mpp_spt.py  mpp_tempo.py  x402.py
src/routeweiler/routing/: __init__.py  router.py  sticky.py
src/routeweiler/trace/: __init__.py  emitter.py  schema.py  sink_sqlite.py
src/routewiler/: __init__.py  _auth.py  _base.py  _constants.py  _storage.py  assets.py  client.py  errors.py  normalized.py
src/routewiler/budgets/: __init__.py  ecb_provider.py  fmv.py  fmv_provider.py  keystore.py  local.py  receipts.py  schema.py
src/routewiler/credentials/: __init__.py  manifest_strategy.py  recovery.py  schema.py  store.py
src/routewiler/credentials/manifests/: __init__.py  lightning-shop.yaml  loader.py  schema.py
src/routewiler/funding/: __init__.py  evm.py  lightning.py  stripe.py  tempo.py
src/routewiler/policy/: __init__.py  dsl.py  engine.py
src/routewiler/rails/: __init__.py  _bolt11.py  _mpp_http.py  _tempo_tx.py  base.py  l402.py  mpp_spt.py  mpp_tempo.py  x402.py
src/routewiler/routing/: __init__.py  router.py  sticky.py
src/routewiler/trace/: __init__.py  emitter.py  schema.py  sink_sqlite.py
tests/: .env.example  conftest.py  test_budget_concurrency.py  test_budget_integration.py  test_budgets_local.py  test_client.py  test_client_envelope.py  test_client_envelope_spec.py  test_errors.py  test_fmv.py  test_keystore.py  test_normalized.py  test_protocol_conformance.py  test_reaper_integration.py  test_trace.py  test_trace_sink_sqlite.py  test_x402_e2e_mock.py
tests/agent_frameworks/: conftest.py  test_crewai_tool_integration.py  test_langgraph_tool_integration.py  test_openai_agents_tool_integration.py
tests/budgets/: test_concurrency.py  test_ecb_provider.py  test_fmv.py  test_fmv_provider.py  test_fmv_refresh.py  test_integration.py  test_keystore.py  test_local.py  test_manual_hold_settlement.py  test_reaper.py  test_reaper_integration.py  test_receipts.py  test_schema.py
tests/credentials/: test_integration.py  test_l402_usd_envelope.py  test_manifest_strategy.py  test_manifests.py  test_recovery.py  test_schema.py  test_split_url_recovery.py  test_store.py
tests/fixtures/: fake_lnd.py  fake_stripe.py  fake_tempo.py  fake_x402_client.py  l402_mock_server.py  l402_split_url_mock_server.py  mock_rail.py  mpp_spt_mock_server.py  mpp_tempo_mock_server.py  x402_mock_server.py
tests/fixtures/x402/: challenge_base_usdc.json  challenge_multi_accept.json
tests/funding/: test_funding.py  test_lightning.py  test_lnd_client.py  test_stripe.py  test_tempo.py
tests/policy/: test_dsl.py  test_engine.py  test_policy_integration.py
tests/policy/fixtures/: policy_minimal.yaml  policy_three_rules.yaml  policy_whitespace_variant.yaml
tests/rails/: test_l402_detector.py  test_l402_e2e_mock.py  test_l402_e2e_polar.py  test_l402_parser.py  test_l402_payer.py  test_mpp_http.py  test_mpp_spt_detector.py  test_mpp_spt_e2e_live.py  test_mpp_spt_e2e_mock.py  test_mpp_spt_parser.py  test_mpp_spt_payer.py  test_mpp_tempo_detector.py  test_mpp_tempo_e2e_live.py  test_mpp_tempo_e2e_mock.py  test_mpp_tempo_parser.py  test_mpp_tempo_payer.py  test_tempo_tx.py  test_x402_detector.py  test_x402_e2e_cdp.py  test_x402_e2e_mock.py  test_x402_parser.py  test_x402_signer.py
tests/recovery/: test_split_url_recovery.py
tests/routing/: test_failover.py  test_router.py  test_sticky.py
tests/trace/: test_emitter_passthrough.py  test_schema.py  test_sink_sqlite.py
