[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------
[project]
name = "routewiler"
dynamic = ["version"]
description = "Neutral micropayment router for autonomous agents — a single HTTP client across x402, L402, and MPP."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Nikolaos Schoinas", email = "schoinas.nkls@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "pydantic>=2.11,<3",
    "httpx>=0.28,<1",
    "eth-account>=0.13,<1",
    "x402[evm]>=2.6,<3",
    "cryptography>=43,<45",
]

[project.optional-dependencies]
dev = [
    "pytest>=9",
    "pytest-asyncio>=1,<2",
    "pytest-cov>=6",
    "respx>=0.21,<1",
    "starlette>=0.46",
    "anyio>=4",
    "ruff>=0.9",
    "mypy>=1.15",
    "python-dotenv>=1",
]

# [project.urls] — add once the GitHub repo is public
# Homepage = "https://github.com/..."
# Repository = "https://github.com/..."
# Issues = "https://github.com/.../issues"

# ---------------------------------------------------------------------------
# Hatch — version source
# ---------------------------------------------------------------------------
[tool.hatch.version]
path = "src/routewiler/__init__.py"

# ---------------------------------------------------------------------------
# Hatch — build targets
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/routewiler"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "LICENSE",
    "README.md",
    "pyproject.toml",
]

# ---------------------------------------------------------------------------
# Hatch — default dev environment
# Places the venv at .venv/ so IDEs auto-detect it.
# ---------------------------------------------------------------------------
[tool.hatch.envs.default]
type = "virtual"
path = ".venv"
features = ["dev"]

[tool.hatch.envs.default.scripts]
lint      = ["ruff check src tests", "ruff format --check src tests"]
format    = ["ruff format src tests", "ruff check --fix src tests"]
typecheck = "mypy src"
test      = "pytest {args:tests}"
cov       = "pytest --cov=routewiler --cov-report=term-missing {args:tests}"
test-live = "pytest --run-live {args:tests}"

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
line-length   = 100
target-version = "py311"
src            = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "RUF", "PL", "PT"]
ignore = [
    "PLR0913",  # too-many-arguments — Pydantic models legitimately have many fields
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "PLR2004",  # magic-value comparisons are fine in test assertions
]
"src/routewiler/_auth.py" = [
    "PLR0912",  # auth flow inherently has many branches (protocol phases + error paths)
    "PLR0915",  # auth flow inherently has many statements (protocol phases + error paths)
    "PLR2004",  # HTTP threshold constant is imported but some checkers still flag sub-expressions
]

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# Mypy — type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version      = "3.11"
strict              = true
plugins             = ["pydantic.mypy"]
mypy_path           = "src"
explicit_package_bases = true
namespace_packages  = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false  # test helpers may omit return annotations

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths   = ["tests"]
addopts     = "-ra"
pythonpath  = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "live: requires --run-live flag and env-var-funded Base-Sepolia test wallet",
]
