[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------
[project]
name = "routeweiler"
dynamic = ["version"]
description = "Neutral micropayment router for autonomous agents — a single HTTP client across x402, L402, and MPP."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Nikolaos Schoinas", email = "schoinas.nkls@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "pydantic>=2.11,<3",
    "httpx>=0.28,<1",
    "eth-account>=0.13,<1",
    "x402[evm]>=2.6,<3",
    "cryptography>=43,<45",
    "pymacaroons>=0.13,<1",
    "lnd-grpc-client>=0.5,<1",
    "stripe>=15.1.0,<16",
]

[project.optional-dependencies]
dev = [
    "pytest>=9",
    "pytest-asyncio>=1,<2",
    "pytest-cov>=6",
    "respx>=0.21,<1",
    "starlette>=0.46",
    "anyio>=4",
    "ruff>=0.9",
    "mypy>=1.15",
    "python-dotenv>=1",
    "types-protobuf",
    "langgraph>=1.0",
    "langchain-core>=0.3",
    "crewai>=0.11.0; python_version < '3.14'",
    "openai-agents>=0.0.10",
]

[project.urls]
Homepage   = "https://github.com/nikoSchoinas/routeweiler-python-sdk"
Repository = "https://github.com/nikoSchoinas/routeweiler-python-sdk"
Issues     = "https://github.com/nikoSchoinas/routeweiler-python-sdk/issues"

# ---------------------------------------------------------------------------
# Hatch — version source
# ---------------------------------------------------------------------------
[tool.hatch.version]
source = "vcs"
raw-options = { root = "../..", tag_pattern = "^python/v(?P<version>.*)$" }

# ---------------------------------------------------------------------------
# Hatch — build targets
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/routeweiler"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "LICENSE",
    "README.md",
    "pyproject.toml",
]

# ---------------------------------------------------------------------------
# Hatch — default dev environment
# Places the venv at .venv/ so IDEs auto-detect it.
# ---------------------------------------------------------------------------
[tool.hatch.envs.default]
type = "virtual"
path = ".venv"
features = ["dev"]

[tool.hatch.envs.default.scripts]
lint                 = ["ruff check src tests", "ruff format --check src tests"]
format               = ["ruff format src tests", "ruff check --fix src tests"]
typecheck            = "mypy src"
test                 = "pytest {args:tests}"
cov                  = "pytest --cov=routeweiler --cov-report=term-missing {args:tests}"
test-live            = "pytest --run-live {args:tests}"
test-agent-frameworks = "pytest --run-agent-frameworks {args:tests/agent_frameworks}"

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
line-length   = 100
target-version = "py311"
src            = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "RUF", "PL", "PT"]
ignore = [
    "PLR0913",  # too-many-arguments — Pydantic models legitimately have many fields
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "PLR2004",  # magic-value comparisons are fine in test assertions
]
"tests/rails/test_mpp_tempo_e2e_live.py" = [
    "PLR0915",  # live merchant app has many sequential RPC/validation steps; not reducible
]
"src/routeweiler/_auth.py" = [
    "PLR0912",  # auth flow inherently has many branches (protocol phases + error paths)
    "PLR0915",  # auth flow inherently has many statements (protocol phases + error paths)
]
"src/routeweiler/client.py" = [
    "PLR0912",  # Routeweiler.__init__ has many branches (three envelope forms + two trace paths)
    "PLR0915",  # Routeweiler.__init__ wires many subsystems (policy, budget, trace, auth, http)
]
"src/routeweiler/rails/_bolt11.py" = [
    "PLR0912",  # BOLT-11 decoder parses many tagged field types; branches are spec-faithful
    "PLR0915",  # BOLT-11 decode() has many sequential spec steps; not reducible without obscuring
    "PLR2004",  # Numeric literals are BOLT-11 spec constants (tag IDs, bit widths, group counts)
]
"src/routeweiler/rails/_tempo_tx.py" = [
    "PLR2004",  # Numeric literals are RLP/EIP-2718 spec constants (0x80, 0xC0, 56, 27/28)
    "RUF005",   # list[*a, b] sugar not needed here; explicit list concat is clearer
]
"src/routeweiler/rails/_mpp_http.py" = [
    "PLR0911",  # JCS serialiser has many return branches — each type is a distinct path
    "PLR2004",  # Numeric literals are RFC-spec constants (0x20 for JSON control chars, 4 for base64)
    "RUF003",   # Unicode U+2013 en-dash in spec cross-reference comment; intentional
]
"src/routeweiler/budgets/fmv.py" = [
    "PLR0911",  # fmv_for_trace has many return branches — each currency type is a distinct path
    "PLR0912",  # fmv_for_trace has many branches — fiat/stablecoin/sats/cross-fiat all distinct
]
"src/routeweiler/rails/mpp_spt.py" = [
    "PLR0912",  # parse() has many branches — each is a distinct validation step per spec
    "PLR2004",  # 2 and 4 are ISO-4217 spec constants for min/max currency code length
]
"src/routeweiler/rails/mpp_tempo.py" = [
    "PLR0912",  # parse() has many branches — each is a distinct validation step per spec
]

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# Mypy — type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version      = "3.11"
strict              = true
plugins             = ["pydantic.mypy"]
mypy_path           = "src"
explicit_package_bases = true
namespace_packages  = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false  # test helpers may omit return annotations

[[tool.mypy.overrides]]
module = "tests.agent_frameworks.*"
ignore_missing_imports = true  # framework packages may not be installed in the default env

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths   = ["tests"]
addopts     = "-ra"
pythonpath  = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "live: requires --run-live flag and env-var-funded wallet (Base-Sepolia for x402, Polar for L402, Tempo Moderato for MPP-Tempo, sk_test_* for MPP-SPT)",
    "agent_frameworks: requires --run-agent-frameworks flag and the agent-frameworks optional-dependency group installed",
]
